force-app/main/default/objects/Funding_Drawdown_Request__c/Funding_Drawdown_Request__c.object-meta.xml
<CustomObject>
    <description>Stores Grant Drawdown Requests that are initially submitted via the community by Grant Recipients. Each Drawdown record represents a total amount being claimed for each month (only one can be submitted per month).</description>
    <label>Funding Drawdown Request</label>
    <nameField>
        <displayFormat>FDRN-{000000}</displayFormat>
        <label>Funding Drawdown Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Drawdown Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>