force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Admin_Costs__c.field-meta.xml
<CustomField>
    <fullName>Admin_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For Challenge Fund only.</description>
    <label>Admin Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>