force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipName>Drawdown_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>