force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Date_monthly_payment_to_be_received__c.field-meta.xml
<CustomField>
    <fullName>Date_monthly_payment_to_be_received__c</fullName>
    <label>Date monthly payment to be received</label>
    <type>Date</type>
</CustomField>