force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Fraud_Management_Plan_and_Fraud_Risk_Ass__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Management_Plan_and_Fraud_Risk_Ass__c</fullName>
    <label>Fraud Risk Assessment Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>