force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Funding_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Funding_Amount_Requested__c</fullName>
    <label>Funding Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>