force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Funding_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Funding_Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Disbursement</label>
    <referenceTo>FundingDisbursement</referenceTo>
    <relationshipLabel>Funding Drawdown Requests</relationshipLabel>
    <relationshipName>Funding_Drawdown_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>