force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Grant_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Grant_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant Recipient</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Drawdown_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>