force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Month_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>Month_Year_Formula__c</fullName>
    <description>Converts the Date Submitted field to a Month and Year so it can be validated via the GMS Funding Drawdown Request flow.</description>
    <formula>TEXT(MONTH( Date_Submitted__c )) &amp; TEXT(YEAR(Date_Submitted__c ))</formula>
    <inlineHelpText>Converts the Date Submitted field to a Month and Year so it can be validated via the GMS Funding Drawdown Request flow.</inlineHelpText>
    <label>Month/Year Formula</label>
    <type>Text</type>
</CustomField>