force-app/main/default/objects/Funding_Drawdown_Request__c/fields/nd_Request_exceed_20_of_total_fund_DEL__c.field-meta.xml
<CustomField>
    <fullName>nd_Request_exceed_20_of_total_fund_DEL__c</fullName>
    <label>2nd Request exceed 20% of total fundiDEL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>