force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <label>Reason for Rejection</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>