force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Related_to_an_approved_phase_request__c.field-meta.xml
<CustomField>
    <fullName>Related_to_an_approved_phase_request__c</fullName>
    <label>Related to an approved phase request?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>