force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Request_exceed_20_of_total_funding__c.field-meta.xml
<CustomField>
    <fullName>Request_exceed_20_of_total_funding__c</fullName>
    <label>Request exceed 20% of total funding?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>