force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Total_A_A__c.field-meta.xml
<CustomField>
    <fullName>Total_A_A__c</fullName>
    <label>Total A&amp;A</label>
    <summarizedField>Funding_Drawdown_Request_Line_Item__c.Admin_Costs__c</summarizedField>
    <summaryForeignKey>Funding_Drawdown_Request_Line_Item__c.Funding_Drawdown_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>