force-app/main/default/objects/Funding_Drawdown_Request__c/fields/Total_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital__c</fullName>
    <label>Total Capital</label>
    <summarizedField>Funding_Drawdown_Request_Line_Item__c.Capital_Costs_Only__c</summarizedField>
    <summaryForeignKey>Funding_Drawdown_Request_Line_Item__c.Funding_Drawdown_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>