force-app/main/default/objects/Funding_Drawdown_Request__c/recordTypes/Challenge_Fund.recordType-meta.xml
<RecordType>
    <fullName>Challenge_Fund</fullName>
    <active>true</active>
    <label>Challenge Fund</label>
</RecordType>