force-app/main/default/objects/Funding_Drawdown_Request__c/recordTypes/Strategic_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Partnership</fullName>
    <active>true</active>
    <label>Strategic Partnership</label>
</RecordType>