force-app/main/default/objects/Funding_Drawdown_Request__c/listViews/Challenge_Funds.listView-meta.xml
<ListView>
    <fullName>Challenge_Funds</fullName>
    <columns>NAME</columns>
    <columns>Grant_Recipient__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Baseline__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Funding_Amount_Requested__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Funding_Drawdown_Request__c.Challenge_Fund</value>
    </filters>
    <label>Challenge Fund Drawdown Requests</label>
</ListView>