force-app/main/default/objects/Funding_Drawdown_Request__c/listViews/Submitted_Funding_Drawdown_Requests.listView-meta.xml
<ListView>
    <fullName>Submitted_Funding_Drawdown_Requests</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Funding_Award__c</columns>
    <columns>Baseline__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Status__c</columns>
    <columns>Funding_Amount_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted Funding Drawdown Requests</label>
</ListView>